--- a/hawc/apps/animalv2/templates/animalv2/fragments/_chemical_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_chemical_row.html
@@ -4,3 +4,4 @@
   <td>{{object.dtxsid.verbose_link|safe|default:"-"   }}</td>
   {% include "common/fragments/_object_row.html" with model="chemical" app="animalv2" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="chemical" %}
