--- a/hawc/apps/animalv2/templates/animalv2/fragments/_endpoint_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_endpoint_row.html
@@ -5,3 +5,4 @@
   <td>{{object.resolved_effect}}</td>
   {% include "common/fragments/_object_row.html" with model="endpoint" app="animalv2" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="endpoint" %}
