--- a/hawc/apps/animalv2/templates/animalv2/fragments/_observationtime_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_observationtime_row.html
@@ -4,3 +4,4 @@
   <td>{{object.get_observation_time_units_display}}</td>
   {% include "common/fragments/_object_row.html" with model="observationtime" app="animalv2" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="observationtime" %}
