--- a/hawc/apps/animalv2/templates/animalv2/fragments/_treatment_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_treatment_row.html
@@ -3,3 +3,4 @@
   <td>{{object.chemical}}</td>
   {% include "common/fragments/_object_row.html" with model="treatment" app="animalv2" %}
 </tr>
+{% include "common/fragments/_create_row.html" with model="treatment" %}
