--- a/hawc/templates/includes/htmx_alert.html
+++ b/hawc/templates/includes/htmx_alert.html
@@ -2,5 +2,5 @@
   {% alert classes="col-12" %}
     <h4 id="htmx-alert" class="alert-heading"></h4>
     <span>Please check your network connection and refresh this page. Please <a href="{% url 'contact' %}">contact us</a> if the issue continues to occur.</span>
-  </div>
+  {% endalert %}
 </div>
