--- a/hawc/apps/animalv2/templates/animalv2/fragments/studylevelvalue_edit_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/studylevelvalue_edit_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML" class="studylevelvalue-edit-row">
+<tr hx-target="this" hx-swap="outerHTML" class="studylevelvalue-edit-row {% if form and not form.instance.id %} create-row {% endif %}">
   {% if form %}
     <td colspan="6" class="bg-lightblue">
       <form class="studylevelvalue-form pad-form p-3" method="post" enctype="multipart/form-data">
@@ -23,7 +23,7 @@
             </button>
             <button class="btn btn-light"
                     type='button'
-                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.studylevelvalue-edit-row'), true)">
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.studylevelvalue-edit-row'), false)">
               Cancel
             </button>
           {% endif %}
