--- a/hawc/apps/animalv2/templates/animalv2/fragments/_endpoint_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_endpoint_row.html
@@ -1,8 +1,8 @@
 <tr hx-target="this" hx-swap="outerHTML" class="endpoint-{{object.id}}">
-  <td>{{object.resolved_name}}</td>
-  <td>{{object.resolved_system}}</td>
-  <td>{{object.resolved_organ}}</td>
-  <td>{{object.resolved_effect}}</td>
+  <td>{{object.name}}</td>
+  <td>{{object.system}}</td>
+  <td>{{object.organ}}</td>
+  <td>{{object.effect}}</td>
   {% include "common/fragments/_object_row.html" with model="endpoint" app="animalv2" %}
 </tr>
 {% include "common/fragments/_create_row.html" with model="endpoint" %}
