--- a/hawc/apps/animalv2/templates/animalv2/fragments/_observationtime_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_observationtime_row.html
@@ -1,5 +1,5 @@
 <tr hx-target="this" hx-swap="outerHTML" class="observationtime-{{object.id}}">
-  <td>{{object.endpoint.resolved_name}}</td>
+  <td>{{object.endpoint.name}}</td>
   <td>{{object.observation_time}}</td>
   <td>{{object.get_observation_time_units_display}}</td>
   {% include "common/fragments/_object_row.html" with model="observationtime" app="animalv2" %}
