--- a/hawc/apps/animalv2/templates/animalv2/studylevelvalues.html
+++ b/hawc/apps/animalv2/templates/animalv2/studylevelvalues.html
@@ -4,14 +4,16 @@
   <div class="d-flex">
     <h2 class="mb-2">Study Level Values</h2>
     {% if obj_perms.edit %}
-      <a class="btn mt-1 btn-primary flex-shrink-0 align-self-start ml-auto" hx-get="{% url 'animalv2:studylevelvalues-htmx' study.pk 'create' %}" hx-trigger="click" hx-target=".studylevelvalue-edit-row.create-row" hx-swap="outerHTML" href="/">Create new study level value</a>
+      <a class="btn mt-1 btn-primary flex-shrink-0 align-self-start ml-auto" hx-get="{% url 'animalv2:studylevelvalues-htmx' study.pk 'create' %}" hx-trigger="click" hx-target=".studylevelvalue-edit-row.create-row" hx-swap="outerHTML" href="/">Create New</a>
     {% endif %}
   </div>
   <table class="table table-sm table-striped">
     {% if obj_perms.edit %}
-      {% bs4_thead 'System,Value type,Value,Units,Comments,Editing' %}
+      {% bs4_thead 'System,Value Type,Value,Comments,Editing' %}
+      {% bs4_colgroup '20,20,20,20,20' %}
     {% else %}
-      {% bs4_thead 'System,Value type,Value,Units,Comments' %}
+      {% bs4_thead 'System,Value Type,Value,Comments' %}
+      {% bs4_colgroup '25,25,25,25' %}
     {% endif %}
     <tbody>
       {% for object in object_list %}
