--- a/hawc/apps/animalv2/templates/animalv2/fragments/studylevelvalue_row.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/studylevelvalue_row.html
@@ -1,8 +1,7 @@
 <tr hx-target="this" hx-swap="outerHTML" class="studylevelvalue-detail-row">
   <td>{{object.system}}</td>
   <td>{{object.get_value_type_display}}</td>
-  <td>{{object.value}}</td>
-  <td>{{object.units}}</td>
+  <td>{{object.value}}&nbsp;{{object.units}}</td>
   <td>{{object.comments}}</td>
   {% if action == 'delete' %}
     <td>
