--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -64,15 +64,6 @@
           {% endif %}
         {% endif %}
       {% endactions %}
-
-    {% else %}
-
-      {% if object.bioassay %}
-        {% actions %}
-          <span class="dropdown-header">Animal bioassay</span>
-          <a class="dropdown-item" href="{% url 'animalv2:studylevelvalues' object.pk %}">View study level values</a>
-        {% endactions %}
-      {% endif %}
     {% endif %}
   </div>
 
@@ -121,6 +112,8 @@
       {% if assessment.animal_version == 1 %}
         {% include "animal/_experiment_list_tbl.html" with object_list=object.experiments.all %}
       {% elif assessment.animal_version == 2 %}
+        <h3>Study level values</h3>
+        {% include "animalv2/fragments/studylevelvalue_tbl.html" with object_list=object.values.all %}
         {% include "animalv2/fragments/_experiment_list_tbl.html" with object_list=object.v2_experiments.all %}
       {% endif %}
     {% endif %}
