ICF bioassay v2 add study level values (#1081)
* added study level value schema and migration

* added admin view and sample fixture value

* added CRUDL operations

* added animalv2 htmx and views unit tests

* updated table display and test case for update

* fix htmx_alert

* htmx updates

* update test

* update lists

* show values on study detail page

* few more comments from final review

* fix new test

---------

Co-authored-by: Berkowitz <55586@icf.com>
Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>
Co-authored-by: casey1173 <caseyhansen1999@gmail.com>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -28,6 +28,7 @@
               <a class="dropdown-item" href="{% url 'animal:experiment_copy' object.pk %}">Copy from existing</a>
             {% elif assessment.animal_version == 2 %}
               <a class="dropdown-item" href="{% url 'animalv2:experiment_create' object.pk %}">Create new experiment</a>
+              <a class="dropdown-item" href="{% url 'animalv2:studylevelvalues' object.pk %}">View study level values</a>
             {% endif %}
           {% endif %}
 
@@ -111,6 +112,8 @@
       {% if assessment.animal_version == 1 %}
         {% include "animal/_experiment_list_tbl.html" with object_list=object.experiments.all %}
       {% elif assessment.animal_version == 2 %}
+        <h3>Study level values</h3>
+        {% include "animalv2/fragments/studylevelvalue_tbl.html" with object_list=object.values.all %}
         {% include "animalv2/fragments/_experiment_list_tbl.html" with object_list=object.v2_experiments.all %}
       {% endif %}
     {% endif %}
