--- a/hawc/apps/animal/templates/animal/animalgroup_form.html
+++ b/hawc/apps/animal/templates/animal/animalgroup_form.html
@@ -19,20 +19,14 @@
 {% block extrajs %}
   <script type="text/javascript">
     $(document).ready(function() {
-      var printf = window.app.HAWCUtils.printf,
-          animalGroupSetup = function(){
+      var animalGroupSetup = function(){
         var onSpeciesChange = function(e, onStrainUpdateComplete){
                 // only show proper strains for a given species
           var selected = $('#id_strain option:selected').val(),
               update_strain_opts = function(d){
-            var opts = _.map(d, function(v, i){
-              return printf('<option value="{0}">{1}</option>', v.id, v.name);
-            }).join('');
-
+            var opts = _.map(d, v => `<option value="${v.id}">${v.name}</option>`).join('');
             $('#id_strain').html(opts);
-            $(printf('#id_strain option[value="{0}"]', selected))
-              .prop('selected', true);
-
+            $(`#id_strain option[value="${selected}"]`).prop('selected', true);
             if (onStrainUpdateComplete !== undefined) {
               onStrainUpdateComplete();
             }
