--- a/hawc/apps/udf/templates/udf/widget.html
+++ b/hawc/apps/udf/templates/udf/widget.html
@@ -1,4 +1,21 @@
-<fieldset disabled hidden>
-    <input type="text">
-</fieldset>
-{% include 'django/forms/widgets/multiwidget.html' %}
+<script defer="" src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+<div x-data="{data: [], count: 0}">
+
+    {% for widget in widget.subwidgets %}
+        <div x-ref="initial_{{forloop.counter0}}">
+            {% include widget.template_name %}
+            <button type="button" @click="$refs.initial_{{forloop.counter0}}.remove()">Remove Row</button>
+        </div>
+    {% endfor %}
+
+    <template x-for="(_, index) in data" :key="index">
+        <div>
+            {% include default_widget.template_name with widget=default_widget %}
+            <button type="button" @click="data.splice(index, 1)">Remove Row</button>
+        </div>
+    </template>
+
+    <button type="button" @click="data.push(count++)">Add Row</button>
+
+</div>
