cleanup create/read/update

--- a/hawc/apps/assessment/templates/assessment/preferred_dose_units_widget.html
+++ b/hawc/apps/assessment/templates/assessment/preferred_dose_units_widget.html
@@ -1,3 +1,4 @@
+{% comment %} TODO - here {% endcomment %}
 <div id='pduDiv' class='row' style="display: none;" >
   <div class='col-md-4'>
     <label class="col-form-label">Available doses</label>
