--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -10,22 +10,7 @@
 
 {% block extrajs %}
   {{ smart_tag_form.media }}
-  <script id="config" type="text/json" charset="utf-8">
-    {
-      "assessment": {{assessment.id}},
-      "crud": "{{crud}}",
-      "csrf": "{{csrf_token}}",
-      "visual_type": {{visual_type}},
-      "cancel_url": "{% if crud == "Create" %}{% url 'summary:visualization_list' pk=assessment.id %}{% else %}{{object.get_absolute_url}}{% endif %}",
-      "data_url": "{% url 'summary:api:visual-list' %}",
-      {% if rob_config %}"rob_config": {{rob_config|safe}},{% endif %}
-      {% if api_data_url %}"api_data_url": "{{api_data_url|safe}}",{% endif %}
-      "initial_data": {{initial_data|safe}},
-      "api_heatmap_datasets": "{{form.instance.get_api_heatmap_datasets}}",
-      "clear_cache_url": "{{assessment.get_clear_cache_url}}",
-      "isCreate": {% if crud == "Create" %}true{% else %}false{% endif %}
-    }
-  </script>
+  {{ config|json_script:"config" }}
   <script type="text/javascript">
     window.app.startup("summaryFormsStartup", function(summaryForms){
       const config = window.app.getConfig(),
