--- a/hawc/apps/assessment/templates/assessment/assessment_home.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_home.html
@@ -12,6 +12,8 @@
       {% endif %}
       <span class="dropdown-header">User Defined Fields</span>
       <a class="dropdown-item" href="{% url 'udf:udf_list' %}">View form list</a>
+      <span class="dropdown-header">Trained Models</span>
+      <a class="dropdown-item" href="{% url 'assessment:trained_model_list' %}">View trained models</a>
     {% endactions %}
   </div>
   <p>Welcome to the HAWC portal. Here you're able to create new assessments or work on existing assessments.</p>
