--- a/hawc/apps/lit/templates/lit/model_prediction_run_create.html
+++ b/hawc/apps/lit/templates/lit/model_prediction_run_create.html
@@ -1,7 +1,7 @@
-{% extends 'crumbless.html' %}
+{% extends 'assessment-rooted.html' %}
 
 {% block content %}
 
-{% crispy form %}
+  {% crispy form %}
 
 {% endblock %}
