--- a/hawc/apps/lit/templates/lit/duplicate_candidates.html
+++ b/hawc/apps/lit/templates/lit/duplicate_candidates.html
@@ -4,6 +4,9 @@
 {% block content %}
   <div class="d-flex">
     <h2>Duplicate candidates</h2>
+    {% actions %}
+      <a class="dropdown-item" href="{% url 'lit:duplicate-task' assessment.pk %}">Run deduplication</a>
+    {% endactions %}
   </div>
   <ul class="list-group list-group-flush my-3">
     {% for object in object_list %}
