--- a/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_table.html
+++ b/hawc/apps/animalv2/templates/animalv2/fragments/_experiment_table.html
@@ -5,6 +5,7 @@
     {% optional_table_row "Design" object.get_design_display %}
     {% optional_table_row "Multiple generations" object.get_has_multiple_generations_display %}
     {% optional_table_row "Guideline compliance" object.guideline_compliance %}
+    {% optional_table_row "Guideline" object.guideline %}
     {% optional_table_row "Comments" object.comments %}
   </tbody>
 </table>
